--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ deploy:
   skip_cleanup: true
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get --yes install python python3 python-pip python-qt4 p7zip-full unzip
+  - sudo apt-get --yes install python python3 python-qt4 p7zip-full unzip
   - echo -e "machine github.com\n  login $GITHUB_TOKEN" >> ~/.netrc
   - git lfs pull
 branches:
