--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,16 @@ deploy:
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get --yes install python python3 python-qt4 p7zip-full unzip
-  - echo -e "machine github.com\n  login $GITHUB_TOKEN" >> ~/.netrc
-  - git lfs pull
+install:
+  - brew install pyqt
+  - brew install sip
+  - brew install sip --with-python3
+  - brew install pyqt --with-python3
 branches:
   only:
   - master
   - development
+notifications:
+  email:
+    on_success: alyays
+    on_failure: always
