--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ python:
 - "2.7"
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get --yes install python python3 python-qt4 p7zip-full unzip
+  - sudo apt-get --yes install python python3 qt4-default qt4-designer python-qt4 python3-pyqt4  p7zip-full unzip
+matrix:
+  fast_finish: true
 branches:
   only:
   - master
