--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ sudo:           required
 dist:           trusty
 deploy:
   skip_cleanup: true
+  provider: awesome-experimental-provider
+  edge: true
 python:
 - "2.7"
 before_install:
