--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
 theme: jekyll-theme-merlot
+title: Ob3vil1on Project
+description: Most powerfull archive cracker created in pure python, cracking zip, 7z, rar
+show_downloads: true
+
