Set theme jekyll-theme-architect

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-merlot
+theme: jekyll-theme-architect
 title: Ob3vil1on Project
 description: Most powerfull archive cracker created in pure python, cracking zip, 7z, rar
 show_downloads: true
